--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Carroussel</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div class="box">
+      <img src="/public/img/img1.jpg" alt="" class="img1" />
+      <img src="/public/img/img2.jpg" alt="" class="img2" />
+      <img src="/public/img/img3.jpg" alt="" class="img3" />
+      <img src="/public/img/img4.jpg" alt="" class="img4" />
+    </div>
   </body>
 </html>
